major restructuring of plotting app for analysis

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -1,10 +1,14 @@
-cmake_minimum_required(VERSION 2.8.12 FATAL_ERROR)
-project(PlottingFramework CXX)
+cmake_minimum_required(VERSION 3.15 FATAL_ERROR)
+set(CMAKE_VERBOSE_MAKEFILE off)
 set(CMAKE_BUILD_TYPE Debug)
 
+project(PlottingFramework CXX)
 set(REQUIRED_ROOT_VERSION 6.16)
 set(REQUIRED_BOOST_VERSION 1.68)
 set(Boost_USE_MULTITHREADED TRUE)
+if (APPLE)
+  set(CMAKE_MACOSX_RPATH ON)
+endif (APPLE)
 
 # add user applications that should be linked to the framework here
 # name of the executable:
@@ -14,15 +18,14 @@ set(APPLICATIONS
 )
 # corresponding source file:
 set(APPLICATIONS_SRC
-  apps/PlottingApp.cxx
-  apps/CreatePlots.cxx
+  "apps/PlottingApp.cxx"
+  "apps/MultDepSpec/CreatePlots.cxx apps/MultDepSpec/Datasets.cxx apps/MultDepSpec/Energies.cxx apps/MultDepSpec/Systems.cxx apps/MultDepSpec/Publications.cxx apps/MultDepSpec/Test.cxx apps/MultDepSpec/Publications.cxx apps/MultDepSpec/Helpers.cxx"
 )
 # files that you want to associate to your app -- put "" if not required
 set(APPLICATIONS_ADDITIONAL_FILES
 ""
-"apps/CreatePlots.h"
+"apps/multDepSpec/MultDepSpec.h"
 )
-
 
 set(MODULE PlottingFramework)
 set(MODULE_HDR include/${MODULE}.h)
@@ -53,6 +56,7 @@ add_library(${MODULE} SHARED ${SRCS} ${HDRS} ${MODULE_HDR} ${ADDITIONAL_FILES})
 target_link_libraries(${MODULE} ${ROOT_LIBRARIES} ${Boost_LIBRARIES} Boost::boost)
 include_directories(${CMAKE_CURRENT_SOURCE_DIR}/include ${ROOT_INCLUDE_DIRS} ${Boost_INCLUDE_DIRS}/boost/property_tree ${Boost_INCLUDE_DIRS}/boost/program_options)
 
+
 # create executables
 list(LENGTH APPLICATIONS NUMBER_OF_APPS)
 math(EXPR NUMBER_OF_APPS "${NUMBER_OF_APPS} - 1")
@@ -62,7 +66,9 @@ foreach(INDEX RANGE ${NUMBER_OF_APPS})
   list(GET APPLICATIONS_SRC ${INDEX} APP_CODE)
   list(GET APPLICATIONS_ADDITIONAL_FILES ${INDEX} APP_ADD_FILE)
   string(REPLACE " " ";" APP_ADD_FILE "${APP_ADD_FILE}") 
-  message(STATUS "Creating executable ${APP_NAME} from file ${APP_CODE} including ${APP_ADD_FILE}")
+  string(REPLACE " " ";" APP_CODE "${APP_CODE}")
+  message(STATUS "Creating executable ${APP_NAME} from file(s) ${APP_CODE} including ${APP_ADD_FILE}")
+
   add_executable(${APP_NAME} ${APP_CODE} ${APP_ADD_FILE})
   target_link_libraries(${APP_NAME} ${MODULE})
 endforeach()
